Bug 495501 - Windows in Grid view are scaled down too much with animation speed globally set to instant
Summary: Windows in Grid view are scaled down too much with animation speed globally s...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: 6.2.2
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 494626 495543 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-10-28 18:55 UTC by Andrey-Mattias
Modified: 2024-11-01 15:42 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey-Mattias 2024-10-28 18:55:50 UTC
SUMMARY
Grid view of virtual desktops is broken if you set animations speed to a maximum position
(i set animations speed to a maximum position to remove animations in Plasma)

STEPS TO REPRODUCE
1. Set animations speed in "quick settings" in "system settings" to a maximum position
2. use shortcut to open Grid view of virtual desktops
3. observe

OBSERVED RESULT
Application windows on every virtual desktop in Grid view of virtual desktops are ultrasmall and downscaled (roughly to ~18% of their intended area) so they fill only <25% of corresponding virtual desktop.

EXPECTED RESULT
Application windows on every virtual desktop in Grid view of virtual desktops are scaled to be as big as possible and to fill most of corresponding virtual desktop area (~80%)

ADDITIONAL INFORMATION
If you set animations speed in "quick settings" in "system settings" to any position but a maximum one, bug goes away.
---
I can't make a screenshot of a Grid view of virtual desktops with Spectacle for some reason. Should also be a bug, xD

SOFTWARE/OS VERSIONS
Operating System: KDE neon 6.2
KDE Plasma Version: 6.2.2
KDE Frameworks Version: 6.7.0
Qt Version: 6.7.2
Kernel Version: 6.8.0-47-generic (64-bit)
Graphics Platform: X11
Processors: 28 × Intel® Xeon® CPU E5-2690 v4 @ 2.60GHz
Memory: 62.6 ГиБ of RAM
Graphics Processor: AMD Radeon RX 550
Comment 1 Nate Graham 2024-10-29 17:06:40 UTC
Hah, can reproduce!
Comment 2 Nate Graham 2024-10-29 19:36:51 UTC
*** Bug 495543 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2024-10-30 15:56:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6720
Comment 4 Niccolò Venerandi 2024-10-31 10:05:56 UTC
Git commit d7acc24093ce70cd970b7d3bb830d766da051e20 by Niccolò Venerandi.
Committed on 31/10/2024 at 09:35.
Pushed by niccolove into branch 'master'.

Update ExpoCell contentItem position upon its parent change

Since the position of the contentItem depends on the position and scale
of the parent item, make sure to re-evaluate it when the parent changes.

M  +6    -0    src/plugins/private/expolayout.cpp

https://invent.kde.org/plasma/kwin/-/commit/d7acc24093ce70cd970b7d3bb830d766da051e20
Comment 5 Niccolò Venerandi 2024-10-31 10:07:53 UTC
Git commit 1dbe3863a734d14c24414a0a8d8bf4f85b33dc19 by Niccolò Venerandi.
Committed on 31/10/2024 at 10:07.
Pushed by niccolove into branch 'Plasma/6.2'.

Update ExpoCell contentItem position upon its parent change

Since the position of the contentItem depends on the position and scale
of the parent item, make sure to re-evaluate it when the parent changes.


(cherry picked from commit d7acc24093ce70cd970b7d3bb830d766da051e20)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +6    -0    src/plugins/private/expolayout.cpp

https://invent.kde.org/plasma/kwin/-/commit/1dbe3863a734d14c24414a0a8d8bf4f85b33dc19
Comment 6 Nate Graham 2024-11-01 15:42:52 UTC
*** Bug 494626 has been marked as a duplicate of this bug. ***