Update ExpoCell contentItem position upon its parent change

Since the position of the contentItem depends on the position and scale
of the parent item, make sure to re-evaluate it when the parent changes.

BUG:495501